--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-budget",
+  "name": "personal-budget1",
   "version": "1.0.0",
   "description": "The path to NGInx main folder:\r /usr/share/nginx/html",
   "main": "server.js",
@@ -7,15 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/saipavan137/personal-budget.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "mongodb": "^3.6.2",
+    "mongoose": "^7.6.2"
   }
 }
